Compiler/tests/bad/Ownership/02_ownership.rs
fn main()
{
  let mut x:i32 = 52;
  let mut y:&mut i32 = &mut x;
    
  let y:&mut i32 = &mut y;
  

  println!(x);
  
  return;
}
